--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -51,7 +51,7 @@
             [Template content will be inserted here]
         </div>
         <div id="aside">
-            <p>Learn more about JBoss Enterprise Application
+            <p>Learn more about JBoss Enterprise Application !!!!!
                 Platform 6.</p>
             <ul>
                 <li><a href="https://access.redhat.com/site/documentation/JBoss_Enterprise_Application_Platform/">Documentation</a></li>
